--- a/docs/01.指南/02.快速上手/01.项目启动.md
+++ b/docs/01.指南/02.快速上手/01.项目启动.md
@@ -14,6 +14,10 @@ permalink: /pages/10bfa7/
 [Centos7安装RocketMQ 5.1.1](/pages/0fb88c/)  
 [Centos7安装Jdk 17.0.7](/pages/65acfd/)  
 
+## 视频地址
+[老寇云平台-项目演示](https://www.bilibili.com/video/BV16M411C7v7/?spm_id_from=333.999.0.0&vd_source=ab1fb14d6d69950653360d4467efe4a5)   
+[老寇云平台-项目运行](https://www.bilibili.com/video/BV1Se41197Fp/?spm_id_from=333.999.0.0&vd_source=ab1fb14d6d69950653360d4467efe4a5)    
+
 ## 项目运行
 🚀 启动Mysql、Redis和RocketMQ（如果使用高亮搜索，需要启动Elasticsearch）    
 
