--- a/docs/01.指南/02.快速上手/01.项目启动.md
+++ b/docs/01.指南/02.快速上手/01.项目启动.md
@@ -19,7 +19,7 @@ permalink: /pages/10bfa7/
 [老寇云平台-项目运行](https://www.bilibili.com/video/BV1Se41197Fp/?spm_id_from=333.999.0.0&vd_source=ab1fb14d6d69950653360d4467efe4a5)    
 
 ## 项目运行
-🚀 启动Mysql、Redis和RocketMQ（如果使用高亮搜索，需要启动Elasticsearch）    
+🚀 启动Mysql、Redis和RocketMQ、Kafka（如果使用高亮搜索，需要启动Elasticsearch）    
 
 🚀 创建数据库和初始化数据，因为数据库比较多，使用flyway来管理数据库版本，话不多说，直接运行即可（如果需要写flyway相关文章，直接提issue）
 <img src="/img/5/img_21.png"/>
