--- a/docs/01.指南/01.环境搭建/07.Centos7安装Elasticsearch 8.6.2.md
+++ b/docs/01.指南/01.环境搭建/07.Centos7安装Elasticsearch 8.6.2.md
@@ -53,6 +53,7 @@ cd /usr/local/elasticsearch/config
 vi elasticsearch.yml
 ```
 ```shell
+# 增加
 http.cors.enabled: true
 http.cors.allow-origin: "*"
 network.host: 0.0.0.0
@@ -73,5 +74,94 @@ vi jvm.options
 -Xmx512m
 ```
 
+###### 修改jdk位置
+```shell
+cd /usr/local/elasticsearch/bin
+vi elasticsearch-env
+export ES_JAVA_HOME=$JAVA_HOME
+```
 
+###### 开启ssl
+```shell
+cd /usr/local/elasticsearch/bin
+# ES的根目录生成CA证书
+./elasticsearch-certutil ca
+# 根据生成的证书，生成p12密钥
+./elasticsearch-certutil cert --ca elastic-stack-ca.p12
+```
+```shell
+mkdir /usr/local/elasticsearch/config/certs
+cd ..
+cp elastic-stack-ca.p12 config/certs
+cp elastic-certificates.p12 config/certs
+```
+```shell
+cd config
+vi elasticsearch.yml
+```
+```shell
+# 授予权限
+chown elasticsearch: /usr/local/elasticsearch/config/certs/elastic-certificates.p12
+```
+```shell
+# 增加
+xpack.security.enabled: true
+xpack.license.self_generated.type: basic
+xpack.security.transport.ssl.enabled: true
+xpack.security.transport.ssl.verification_mode: certificate
+xpack.security.transport.ssl.keystore.path: certs/elastic-certificates.p12
+xpack.security.transport.ssl.truststore.path: certs/elastic-certificates.p12
+```
 
+###### 报错处理
+```shell
+# max virtual memory areas vm.max_map_count [65530] is too low, increase to at least [262144]
+vi /etc/sysctl.conf
+```
+```shell
+vm.max_map_count = 655360
+```
+```shell
+# 刷新参数
+sysctl -p
+```
+```shell
+# max file descriptors [4096] for elasticsearch process is too low, increase to at least [65535]
+vi /etc/security/limits.conf
+```
+```shell
+elasticsearch soft nofile 65535
+elasticsearch hard nofile 65537
+```
+
+###### 启动
+```shell
+# 切换用户
+su elasticsearch
+```
+```shell
+cd /usr/local/elasticsearch/bin
+./elasticsearch
+```
+
+###### 设置密码
+```shell
+cd /usr/local/elasticsearch/config
+vi elasticsearch.yml
+```
+```shell
+# 增加
+http.cors.allow-headers: Authorization
+```
+```shell
+# 重启elasticsearch
+cd /usr/local/elasticsearch/bin
+./elasticsearch-setup-passwords interactive
+```
+
+###### 后台运行
+```shell
+chmod +x /usr/local/elasticsearch/bin/elasticsearch
+cd /usr/local/elasticsearch/bin
+./elasticsearch -d
+```
