--- a/docs/01.指南/01.环境搭建/05.Centos7安装Docker 23.0.6.md
+++ b/docs/01.指南/01.环境搭建/05.Centos7安装Docker 23.0.6.md
@@ -5,7 +5,7 @@ permalink: /pages/65acff/
 ---
 
 你好呀，我的老朋友！我是老寇，欢迎来到老寇云平台！  
-跟我一起安装Docker
+跟我一起安装Docker。
 
 ## 安装必读
 ###### 官方建议内核3.10以上，如果安装失败，请更换 [Centos7镜像](http://mirrors.163.com/centos/7.9.2009/isos/x86_64)
