--- a/docs/01.指南/01.环境搭建/07.Centos7安装Elasticsearch 8.6.2.md
+++ b/docs/01.指南/01.环境搭建/07.Centos7安装Elasticsearch 8.6.2.md
@@ -5,7 +5,7 @@ permalink: /pages/d715cf/
 ---
 
 你好呀，我的老朋友！我是老寇，欢迎来到老寇云平台！  
-跟我一起安装Elasticsearch
+跟我一起安装Elasticsearch。
 
 ## 下载elasticsearch
 <a target="_blank" href="https://www.elastic.co/cn/downloads/past-releases/elasticsearch-8-6-2">elasticsearch官网地址</a><br/>
