--- a/docs/01.指南/02.快速上手/00.一键部署.md
+++ b/docs/01.指南/02.快速上手/00.一键部署.md
@@ -8,7 +8,7 @@ permalink: /pages/10bfa2/
 话不多说，跟我一键部署项目
 
 ## 视频地址
-[老寇云平台-一键部署视频]()  
+[老寇云平台-一键部署视频](https://www.bilibili.com/video/BV1vj411h7EL/?vd_source=ab1fb14d6d69950653360d4467efe4a5)  
 
 ###### 注意
 由于改动的东西比较多，我就再次强调一下   
