--- a/docs/01.指南/02.快速上手/00.一键部署.md
+++ b/docs/01.指南/02.快速上手/00.一键部署.md
@@ -15,6 +15,9 @@ permalink: /pages/10bfa2/
 1.脚本先构建完mysql，然后停掉所有服务，然后单独运行mysql，完成数据库的初始化，然后重启所有服务  
 2.IP修改  
 
+mysql配置
+<img src="/img/11/img_10.png"/>
+
 kafka配置
 <img src="/img/11/img.png"/>
 
