--- a/docs/01.指南/02.快速上手/01.项目启动.md
+++ b/docs/01.指南/02.快速上手/01.项目启动.md
@@ -24,7 +24,7 @@ permalink: /pages/10bfa7/
 🚀 创建数据库和初始化数据，因为数据库比较多，使用flyway来管理数据库版本，话不多说，直接运行即可（如果需要写flyway相关文章，直接提issue）
 <img src="/img/5/img_21.png"/>
 
-🚀 切换开发环境为test（dev环境是http，test环境是https，keytool生成的证书，推荐使用test环境，记得改pom和nacos配置）  
+🚀 切换开发环境为dev，测试环境为test（dev环境是http，test环境是https，keytool生成的证书，推荐测试使用test环境，记得改pom和nacos配置）  
 <img src="/img/5/img_22.png"/>
 
 🚀 修改pom.xml配置，修改数据库连接信息，其他信息默认即可  
