--- a/docs/02.赞助/01.赞助.md
+++ b/docs/02.赞助/01.赞助.md
@@ -26,6 +26,18 @@ article: false
         <th>金额</th>
         <th>备注</th>
     </tr>
+        <tr>
+        <td>2023/08/27</td>
+        <td>*迪</td>
+        <td>￥20</td>
+        <td>越来越好，继续干下去</td>
+    </tr>
+    <tr>
+        <td>2023/08/27</td>
+        <td>*界</td>
+        <td>￥10</td>
+        <td>希望越来越好</td>
+    </tr>
     <tr>
         <td>2023/08/27</td>
         <td>*界</td>
