--- a/docs/02.赞助/01.赞助.md
+++ b/docs/02.赞助/01.赞助.md
@@ -26,7 +26,13 @@ article: false
         <th>金额</th>
         <th>备注</th>
     </tr>
-        <tr>
+    <tr>
+        <td>2023/12/08</td>
+        <td>*来</td>
+        <td>￥10</td>
+        <td>希望越来越好，一直坚持下去</td>
+    </tr>
+    <tr>
         <td>2023/12/08</td>
         <td>*迪</td>
         <td>￥20</td>
