--- a/docs/01.指南/01.环境搭建/05.Centos7安装Docker 23.0.6.md
+++ b/docs/01.指南/01.环境搭建/05.Centos7安装Docker 23.0.6.md
@@ -54,6 +54,20 @@ systemctl status docker
 systemctl enable docker
 ```
 
+## 安装Docker-Compose
+[下载地址](https://github.com/docker/compose/releases/tag/v2.23.3)
+<img src="/img/7/img.png"/>
+
+```shell
+cd /opt
+mv docker-compose-linux-x86_64 /usr/local/bin/docker-compose
+sudo chmod +x /usr/local/bin/docker-compose
+# 全局设置
+sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+# 查看版本
+docker-compose --version
+```
+
 ## 常见问题
 ### 1.Running docker container : iptables: No chain/target/match by that name
 ```shell
