--- a/docs/01.指南/01.环境搭建/07.Centos7安装Elasticsearch 8.6.2（傻瓜式安装）.md
+++ b/docs/01.指南/01.环境搭建/07.Centos7安装Elasticsearch 8.6.2（傻瓜式安装）.md
@@ -1,5 +1,5 @@
 ---
-title: Centos7安装Elasticsearch 8.6.2
+title: Centos7安装Elasticsearch 8.6.2（傻瓜式安装）
 date: 2023-11-02 05:47:05
 permalink: /pages/d715cf/
 ---
