--- a/docs/01.指南/03.快速上手/00.一键部署（傻瓜式教程）.md
+++ b/docs/01.指南/03.快速上手/00.一键部署（傻瓜式教程）.md
@@ -10,10 +10,10 @@ permalink: /pages/10bfa2/
 ## 视频地址
 [老寇云平台-一键部署视频](https://www.bilibili.com/video/BV1vj411h7EL/?vd_source=ab1fb14d6d69950653360d4467efe4a5)  
 
-###### 注意
+## 注意
 由于改动的东西比较多，我就再次强调一下   
-1.脚本先构建完mysql，然后停掉所有服务，然后单独运行mysql，完成数据库的初始化，然后重启所有服务  
-2.IP修改  
+1.脚本先构建完mysql，然后停掉所有服务，然后单独运行mysql，完成数据库的初始化，然后重启所有服务(需要运行项目种flyway脚本)  
+2.IP修改（最新代码的图片未放出来，请将所有IP改为虚拟机IP即可）  
 
 mysql配置
 <img src="/img/11/img_10.png"/>
@@ -47,9 +47,5 @@ laokou-flowable配置
 
 nginx配置
 <img src="/img/11/img_9.png"/>
-
-3.IP被限制，解决方案有两种   
-- 方案1：去kafka日志找到被限制的IP，然后去nacos里面配置白名单
-- 方案2：nacos删掉白名单配置
 
 我是老寇，我们下次再见啦！  
