--- a/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
+++ b/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
@@ -13,13 +13,37 @@ permalink: /pages/10bfa7/
 [Centos7安装Redis 7.0.11](/pages/90401a/)  
 [Centos7安装RocketMQ 5.1.1](/pages/0fb88c/)  
 [Centos7安装Jdk 17.0.7](/pages/65acfd/)  
+[Centos7安装Elasticsearch 8.6.2](/pages/d715cf/)
 
 ## 视频地址
 [老寇云平台-项目演示视频](https://www.bilibili.com/video/BV16M411C7v7/?spm_id_from=333.999.0.0&vd_source=ab1fb14d6d69950653360d4467efe4a5)   
 [老寇云平台-项目运行视频](https://www.bilibili.com/video/BV1Se41197Fp/?spm_id_from=333.999.0.0&vd_source=ab1fb14d6d69950653360d4467efe4a5)    
 
-## 项目运行
-🚀 启动Mysql、Redis和RocketMQ、Kafka（如果使用高亮搜索，需要启动Elasticsearch）    
+## 项目运行（请一定按照作者的步骤来）
+🚀 注意：之前创建的数据库统统删掉（与该项目相关的数据库）
+
+🚀 修改win系统上面的hosts(如有需要，请自行更换IP)
+```shell
+127.0.0.1 vue.laokou.org
+127.0.0.1 mysql.laokou.org
+127.0.0.1 rocketmq.laokou.org
+127.0.0.1 redis.laokou.org
+127.0.0.1 elasticsearch.laokou.org
+127.0.0.1 postgresql.laokou.org
+127.0.0.1 nginx.laokou.org
+127.0.0.1 nacos.laokou.org
+127.0.0.1 seata.laokou.org
+127.0.0.1 kafka.laokou.org
+127.0.0.1 xxl.job.laokou.org
+127.0.0.1 sentinel.laokou.org
+127.0.0.1 monitor.laokou.org
+127.0.0.1 gateway.laokou.org
+127.0.0.1 laokou.org
+127.0.0.1 tenant1.laokou.org
+127.0.0.1 tenant2.laokou.org
+```
+
+🚀 启动Mysql、Redis和RocketMQ（如果使用高亮搜索，需要启动Elasticsearch）    
 
 🚀 创建数据库和初始化数据，因为数据库比较多，使用flyway来管理数据库版本，话不多说，直接运行即可（如果需要写flyway相关文章，直接提issue）
 <img src="/img/5/img_21.png"/>
@@ -34,15 +58,8 @@ permalink: /pages/10bfa7/
 <img src="/img/5/img_5.png"/>  
 <img src="/img/5/img_6.png"/>  
 
-🚀 打开Nacos控制台，创建命名空间  
+🚀 打开Nacos控制台，创建命名空间（如有需要自行修改即可）  
 <img src="/img/5/img_7.png"/>
-
-🚀 修改nacos配置的Mysql、Redis、Seata（本地可使用默认配置）和RocketMQ，确保相关连接信息是否正确
-<img src="/img/5/img.png"/>
-<img src="/img/5/img_1.png"/>
-
-🚀 修改seata配置（不用改就不改）
-<img src="/img/5/img_10.png"/>  
 
 🚀 启动seata  
 <img src="/img/5/img_11.png"/>
@@ -57,13 +74,13 @@ permalink: /pages/10bfa7/
 🚀 启动laokou-flowable（不使用工作流可以不启动）
 <img src="/img/5/img_18.png"/>
 
-🚀 启动laokou-monitor（不使用服务监控可以不启动），还有就是别用老夫的邮箱，求求你改一改吧   
+🚀 启动laokou-monitor（不使用服务监控可以不启动），还有就是别用老夫的邮箱，求求你们改一改吧   
 <img src="/img/5/img_25.png"/>
 
 🚀 启动laokou-sentinel（不使用流量监控可以不启动）   
 <img src="/img/5/img_26.png"/>
 
-🚀 启动laokou-xxl-job（不使用任务调度可以不启动）（springboot版本升级成了spring 3.x.x）   
+🚀 启动laokou-xxl-job（不使用任务调度可以不启动）（springboot版本升级成了spring 3.2.x）   
 <img src="/img/5/img_27.png"/>
 
 ## 常见问题
@@ -74,12 +91,6 @@ permalink: /pages/10bfa7/
 修改 maven/conf/setting.xml 配置  
 ```xml
 <mirrors>
-    <!-- 增加腾讯仓库 -->
-    <mirror>
-        <id>tencent-cloud</id>
-        <mirrorOf>central</mirrorOf>
-        <url>http://mirrors.cloud.tencent.com/nexus/repository/maven-public/</url>
-    </mirror>
     <mirror>
         <id>alimaven</id>
         <mirrorOf>central</mirrorOf>
