--- a/docs/01.指南/03.快速上手/00.一键部署（傻瓜式教程）.md
+++ b/docs/01.指南/03.快速上手/00.一键部署（傻瓜式教程）.md
@@ -12,7 +12,7 @@ permalink: /pages/10bfa2/
 
 ## 注意
 由于改动的东西比较多，我就再次强调一下   
-1.脚本先构建完mysql，然后停掉所有服务，然后单独运行mysql，完成数据库的初始化，然后重启所有服务(需要运行项目种flyway脚本)  
+1.脚本先构建完mysql，然后停掉所有服务，然后单独运行mysql，完成数据库的初始化，然后重启所有服务(需要运行项目中的flyway脚本)  
 2.IP修改（最新代码的图片未放出来，请将所有IP改为虚拟机IP即可）  
 
 mysql配置
