--- a/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
+++ b/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
@@ -66,6 +66,8 @@ permalink: /pages/10bfa7/
 
 🚀 依次启动laokou-gateway、laokou-auth、laokou-admin、laokou-im
 <img src="/img/5/img_12.png"/>  
+🚀 启动完laokou-gateawy 需要运行路由同步脚本
+<img src="/img/5/img_2.png"/>
 <img src="/img/5/img_14.png"/>
 <img src="/img/5/img_13.png"/>  
 <img src="/img/5/img_14.png"/>  
