--- a/docs/01.指南/01.环境搭建/05.Centos7安装Docker 23.0.6（傻瓜式安装）.md
+++ b/docs/01.指南/01.环境搭建/05.Centos7安装Docker 23.0.6（傻瓜式安装）.md
@@ -68,6 +68,26 @@ sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
 docker-compose --version
 ```
 
+## 打开 2375 端口
+1.修改 ```/usr/lib/systemd/system/docker.service``` 添加-H tcp://0.0.0.0:2375
+```shell
+ExecStart=/usr/bin/dockerd -H tcp://0.0.0.0:2375 -H fd:// --containerd=/run/containerd/containerd.sock
+```
+2.刷新配置，重启docker
+```shell
+systemctl daemon-reload
+systemctl restart docker
+```
+3.添加防火墙并重载
+```shell
+firewalld-cmd --zone=public --add-port=2375/tcp --permanent
+firewalld-cmd --reload
+```
+4.查看网络端口
+```shell
+netstat -ntlp
+```
+
 ## 常见问题
 ### 1.Running docker container : iptables: No chain/target/match by that name
 ```shell
