--- a/docs/03.感悟/01.读《强者，都是含泪奔跑的人》读后感.md
+++ b/docs/03.感悟/01.读《强者，都是含泪奔跑的人》读后感.md
@@ -12,4 +12,4 @@ permalink: /pages/623577/
 
 &emsp;&emsp;其次，努力不一定成功，但放弃一定失败。做什么事情前，不要想后面成功了或失败了会发生什么？我们努力去做就行，其他的交给天意！（活在当下，享受当下）  
 
-&emsp;&emsp;最后，希望每个人做自己的英雄，不仅敢于挑战高山河流，还能为小树苗遮风挡雨！（路见不平拔刀助，挡我犯我必诛杀）  
+&emsp;&emsp;最后，希望每个人做自己的英雄，不仅敢于挑战高山河流，还能为小树苗遮风挡雨！（路见不平拔刀助，犯我挡我必诛杀）  
