--- a/docs/01.指南/04.领域驱动设计/02.DDD落地之ThreadLocal原理篇（一）.md
+++ b/docs/01.指南/04.领域驱动设计/02.DDD落地之ThreadLocal原理篇（一）.md
@@ -102,3 +102,6 @@ static class ThreadLocalMap {
 因此，结合上述这些源码及概念，我们可以看出，key为```ThreadLocal```的弱引用，value是强引用，```ThreadLocal```在外部没有强引用的情况下，GC会回收key，而value不会被回收。   
 
 这样就出现了key为```null```的Entry，我们不做任何的措施情况下，value永远不会被回收，这样就有可能造成内存泄露，所以，我们写代码时，最后一定要手动调用```remove()```方法
+
+## 参考资料
+[JavaGuide](https://javaguide.cn/java/concurrent/java-concurrent-questions-03.html#threadlocal)   
