--- a/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
+++ b/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
@@ -48,42 +48,46 @@ permalink: /pages/10bfa7/
 🚀 创建数据库和初始化数据，因为数据库比较多，使用flyway来管理数据库版本，话不多说，直接运行即可（如果需要写flyway相关文章，直接提issue）
 <img src="/img/5/img_21.png"/>
 
-🚀 切换开发环境为dev，测试环境为test（dev环境是http，test环境是https，keytool生成的证书，推荐测试使用test环境，记得改pom和nacos配置）  
+🚀 切换开发环境为dev，测试环境为test（dev环境是http，test环境是https，keytool生成的证书，推荐开发使用dev环境，记得改pom和nacos配置）  
 <img src="/img/5/img_22.png"/>
 
 🚀 修改pom.xml配置，修改数据库连接信息，其他信息默认即可  
 <img src="/img/5/img_23.png"/>
 
-🚀 运行laokou-register，启动单机Nacos（需要配置VM Option）  
+🚀 必须运行laokou-register，启动单机Nacos（需要配置VM Option）  
 <img src="/img/5/img_5.png"/>  
 <img src="/img/5/img_6.png"/>  
 
 🚀 打开Nacos控制台，创建命名空间（如有需要自行修改即可）  
 <img src="/img/5/img_7.png"/>
 
-🚀 启动seata  
+🚀 修改```seataServer.properties```
+<img src="/img/5/img_3.png"/>
+<img src="/img/5/img_4.png"/>
+
+🚀 必须运行seata  
 <img src="/img/5/img_11.png"/>
 
-🚀 依次启动laokou-xxl-job、laokou-gateway、laokou-auth、laokou-admin、laokou-im
+🚀 必须运行laokou-xxl-job（springboot版本升级成了spring 3.2.x）   
+<img src="/img/5/img_27.png"/>
+
+🚀 依次运行laokou-gateway、laokou-auth、laokou-admin、laokou-im（必须运行）
 <img src="/img/5/img_12.png"/>  
-🚀 启动完laokou-gateawy 需要运行路由同步脚本
+🚀 运行完laokou-gateawy 需要运行路由同步脚本
 <img src="/img/5/img_2.png"/>
 <img src="/img/5/img_14.png"/>
 <img src="/img/5/img_13.png"/>  
 <img src="/img/5/img_14.png"/>  
 <img src="/img/5/img_15.png"/>  
 
-🚀 启动laokou-flowable（不使用工作流可以不启动）
+🚀 必须运行laokou-flowable
 <img src="/img/5/img_18.png"/>
 
-🚀 启动laokou-monitor（不使用服务监控可以不启动），还有就是别用老夫的邮箱，求求你们改一改吧   
+🚀 按需要运行laokou-monitor（不使用服务监控可以不启动），还有就是别用老夫的邮箱，求求你们改一改吧   
 <img src="/img/5/img_25.png"/>
 
-🚀 启动laokou-sentinel（不使用流量监控可以不启动）   
+🚀 按需要运行laokou-sentinel（不使用流量监控可以不启动）   
 <img src="/img/5/img_26.png"/>
-
-🚀 启动laokou-xxl-job（不使用任务调度可以不启动）（springboot版本升级成了spring 3.2.x）   
-<img src="/img/5/img_27.png"/>
 
 ## 常见问题
 ### 1.vue开启websocket，wss协议无法建立连接
