--- a/docs/01.指南/04.领域驱动设计/03.DDD落地之AQS原理篇（一）.md
+++ b/docs/01.指南/04.领域驱动设计/03.DDD落地之AQS原理篇（一）.md
@@ -23,7 +23,7 @@ AQS全称```AbstractQueuedSynchronizer```（抽象队列同步器）
  
 我们一起学习```AQS源码```
 ```java
-// 同步状态值
+// 同步状态值（保证线程可见性）
 private volatile int state;
 ```
 ```state```表示同步状态，通过内置的```线程等待队列```来完成获取资源线程的排队工作
@@ -45,7 +45,14 @@ private volatile int state;
     }
 ```
 
+###### ReentrantLock
+```ReentrantLock state```初始状态值为0，表示未锁定状态，线程A```lock()```时，会调用```tryAcquire()```独占该锁并将```state+1``` 
+然后，其他的线程再```tryAcquire()```时就会失败，直到线程A```unlock()```释放锁，```state=0```，其他线程才有机会获取该锁
 
+释放锁之前，线程A自己可以重复获取此锁（state累加），请注意，获取多少次就要释放多少次，保证state归零
+
+###### CountDownLatch
+任务被分成N个子线程去执行，```state```初始化为N（N与线程个数保持一致），这N个子线程并发执行，每个子线程执行完后```countDown()```一次，state会通过CAS减1，直到所有子线程执行完后（state=0），会```unpark()```调用主线程，然后主线程会从```await()```返回，继续执行后面的业务
 
 ## 参考资料
 [JavaGuide](https://javaguide.cn/java/concurrent/java-concurrent-questions-03.html#aqs)   
