--- a/docs/03.感悟/02.修身及养生.md
+++ b/docs/03.感悟/02.修身及养生.md
@@ -21,10 +21,11 @@ permalink: /pages/623578/
 - 不吸毒
 - 不嚼槟榔
 - 不赌博（赌球、飞艇、百家乐）
-- 不打飞机/不YY/不手淫/不自慰/不行邪淫（食色性也不是安慰自己放纵的理由，而且这个'色'指的是美好的事物，而不是两性）
+- 不约炮/不打飞机/不YY/不手淫/不自慰/不行邪淫（食色性也不是安慰自己放纵的理由，而且这个'色'指的是美好的事物，而不是两性）
 - 减少说脏话的频率，提高素质
 - 不要因为好奇纹身，一旦纹身了就要为自己的行为负责（因为不是每个人都喜欢纹身的人，我直接跟你说，其实，大部分人都不喜欢纹身的人）
 - 不要打架，打赢坐牢，打输住院（现在，人比较浮躁，戾气重，万一别人不管不顾，下死手，发泄自己的情绪，那就是有你受的啦）
+- 不要随便和人私奔，也不要随便和一个女人上床
 
 ###### 养生（自己不爱惜自己身体，谁又会心疼你呢？）
 - 堵漏（身体有病治病，无病则改正不良习惯，比如熬夜，放纵）
