--- a/docs/03.感悟/02.修身及养生.md
+++ b/docs/03.感悟/02.修身及养生.md
@@ -21,11 +21,11 @@ permalink: /pages/623578/
 - 不吸毒
 - 不嚼槟榔
 - 不赌博（赌球、飞艇、百家乐）
-- 不约炮/不打飞机/不YY/不手淫/不自慰/不行邪淫/不看一切不良视频图片影像（食色性也不是安慰自己放纵的理由，而且这个'色'指的是美好的事物，而不是两性）
+- 不约炮/不打飞机/不YY/不手淫/不自慰/不行邪淫/不看一切不良视频图片影像音频（食色性也不是安慰自己放纵的理由，而且这个'色'指的是美好的事物，而不是两性）
 - 减少说脏话的频率，提高素质
 - 不要因为好奇纹身，一旦纹身了就要为自己的行为负责（因为不是每个人都喜欢纹身的人，我直接跟你说，其实，大部分人都不喜欢纹身的人）
 - 不要打架，打赢坐牢，打输住院（现在，人比较浮躁，戾气重，万一别人不管不顾，下死手，发泄自己的情绪，那就是有你受的啦）
-- 不要随便和人私奔，也不要随便和一个女人上床
+- 不要随便跟人私奔，也不要随便和一个女人/男人上床
 
 ###### 养生（自己不爱惜自己身体，谁又会心疼你呢？）
 - 堵漏（身体有病治病，无病则改正不良习惯，比如熬夜，放纵）
@@ -50,7 +50,7 @@ permalink: /pages/623578/
 - 做一件事最好的时间是十年前，其次是现在（慢慢积累，量变产生质变）
 - 知错能改，善莫大焉
 - 明辨是非，认真思考你后面遇到的事情（父母说的不一定对，但自己必须能够明辨是非）
-- 培养口才，只要和人打交道就要沟通，说话是一门艺术，必须好好琢磨，多思考多反思，说话前多想想，而且还有察言观色，这样能快速进步
+- 培养口才，只要和人打交道就要沟通，说话是一门艺术，必须好好琢磨，多思考多反思，说话前多想想，而且还要察言观色，这样才能快速进步
 - 低调做人，高调做事（现在，人戾气重，不得不说，网上笑哈哈，现实又是怎么样的你也不知道，网络隔着屏幕，无人知晓屏幕后又是怎么样的）
 - 与人为善，能帮就帮
 - 不怕事，也不惹事（维护自己的正当权益，不让自己的利益受损就行）
