--- a/docs/03.感悟/02.修身及养生.md
+++ b/docs/03.感悟/02.修身及养生.md
@@ -25,7 +25,7 @@ permalink: /pages/623578/
 - 减少说脏话的频率，提高素质
 - 不要因为好奇纹身，一旦纹身了就要为自己的行为负责（因为不是每个人都喜欢纹身的人，我直接跟你说，其实，大部分人都不喜欢纹身的人）
 - 不要打架，打赢坐牢，打输住院（现在，人比较浮躁，戾气重，万一别人不管不顾，下死手，发泄自己的情绪，那就是有你受的啦）
-- 不要随便跟人私奔，也不要随便和一个女人/男人上床
+- 不要随便跟人私奔，也不要随便和一个男人/女人上床
 
 ###### 养生（自己不爱惜自己身体，谁又会心疼你呢？）
 - 堵漏（身体有病治病，无病则改正不良习惯，比如熬夜，放纵）
