--- a/docs/03.感悟/02.修身及养生.md
+++ b/docs/03.感悟/02.修身及养生.md
@@ -42,7 +42,7 @@ permalink: /pages/623578/
 - 认真思考每件事本身的意义
 - 做好是一辈子的事情，做坏是一瞬间的事情
 
-###### 该做的事情(往后的路靠自己走)
+###### 该做的事情（往后的路靠自己走）
 - 不跪天不跪地，只跪自己父母（人活一世，父母才是对你心心念念的人，父母不在，谁会记得你的名字？谁又会想起你？）
 - 不要想太多，不要妄想一夜暴富，踏实活着，认真学习，稳步前进，独立自强（别人不能帮你走路，只能自己含泪奔跑）
 - 有问题就向外反馈，有志同道合的朋友就一起面对问题，不要妄想什么事情都自己扛下来
