--- a/docs/03.感悟/02.修身_养生_情感.md
+++ b/docs/03.感悟/02.修身_养生_情感.md
@@ -1,5 +1,5 @@
 ---
-title: 修身及养生
+title: 修身/养生/情感
 date: 2024-03-05 12:00:00
 permalink: /pages/623578/
 ---
@@ -54,4 +54,8 @@ permalink: /pages/623578/
 - 低调做人，高调做事（现在，人戾气重，不得不说，网上笑哈哈，现实又是怎么样的你也不知道，网络隔着屏幕，无人知晓屏幕后又是怎么样的）
 - 与人为善，能帮就帮
 - 不怕事，也不惹事（维护自己的正当权益，不让自己的利益受损就行）
-- 尊重每一个人，这样可以避免很多麻烦（无论宗教信仰，文化、性取向等等）
+- 尊重每一个人，这样可以避免很多麻烦（无论外貌、学历、宗教信仰，文化、性取向等等）
+
+###### 感情
+- 对于别人的感情，始终处于中立的态度，不发表意见，不然最后受伤的是自己（两人一旦分手，可能会怨你什么什么的）
+- 在外人看来，两人分手，其实两个人都有问题，但不排除单方面的原因，比如出轨/家暴
