--- a/docs/03.感悟/02.修身_养生_情感.md
+++ b/docs/03.感悟/02.修身_养生_情感.md
@@ -55,6 +55,7 @@ permalink: /pages/623578/
 - 与人为善，能帮就帮
 - 不怕事，也不惹事（维护自己的正当权益，不让自己的利益受损就行）
 - 尊重每一个人，这样可以避免很多麻烦（无论外貌、学历、宗教信仰，文化、性取向等等）
+- 理性思考后面发生的一切，积极承担属于自己的责任，以及与自己相关的一切后果
 
 ###### 感情
 - 对于别人的感情，始终处于中立的态度，不发表意见，不然最后受伤的是自己（两人一旦分手，可能会怨你什么什么的）
