--- a/docs/03.感悟/02.修身_养生_情感.md
+++ b/docs/03.感悟/02.修身_养生_情感.md
@@ -54,7 +54,7 @@ permalink: /pages/623578/
 - 低调做人，高调做事（现在，人戾气重，不得不说，网上笑哈哈，现实又是怎么样的你也不知道，网络隔着屏幕，无人知晓屏幕后又是怎么样的）
 - 与人为善，能帮就帮
 - 不怕事，也不惹事（维护自己的正当权益，不让自己的利益受损就行）
-- 尊重每一个人，这样可以避免很多麻烦（无论外貌、学历、宗教信仰，文化、性取向等等）
+- 尊重每一个人，这样可以避免很多麻烦（无论疾病、残疾、外貌、学历、宗教信仰，文化、性取向等等）
 - 理性思考后面发生的一切，积极承担属于自己的责任，以及与自己相关的一切后果
 
 ###### 感情
