--- a/docs/03.感悟/03.宇宙是一个数据库.md
+++ b/docs/03.感悟/03.宇宙是一个数据库.md
@@ -7,4 +7,4 @@ permalink: /pages/623579/
 你好呀，我的老朋友！我是老寇，欢迎来到老寇云平台！  
 几天不见啦，我又来啦！
 
-先开个坑，这是我突发灵感，关于海量数据存储，我还未想好，落地到实践，先放在这里
+先开个坑，这是我突发灵感，关于海量数据存储，我还未想好，从落地到实践，先放在这里
