--- a/docs/03.感悟/02.修身_养生_情感.md
+++ b/docs/03.感悟/02.修身_养生_情感.md
@@ -41,6 +41,12 @@ permalink: /pages/623578/
 - 允许自己普通，知足常乐
 - 认真思考每件事本身的意义
 - 做好是一辈子的事情，做坏是一瞬间的事情
+- 自己治愈自己，明天醒来，又是信心百倍
+- 不被他人影响，坚定自我信念
+- 悄悄努力，一鸣惊人（事以密成，语以泄败）
+- 坚持坚持再坚持
+- 空杯心态，虚怀若谷
+- 爱自己的前提就是照顾好自己身体
 
 ###### 该做的事情（往后的路靠自己走）
 - 不跪天不跪地，只跪自己父母（人活一世，父母才是对你心心念念的人，父母不在，谁会记得你的名字？谁又会想起你？）
