--- a/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
+++ b/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
@@ -42,6 +42,26 @@ permalink: /pages/10bfa7/
 127.0.0.1 tenant1.laokou.org
 127.0.0.1 tenant2.laokou.org
 ```
+🚀 项目拉取（安装git）   
+
+ssh方式拉取（推荐）   
+
+```shell
+git clone git@github.com:KouShenhai/KCloud-Platform-Alibaba.git
+```
+
+https方式   
+
+```shell
+git clone https://github.com/KouShenhai/KCloud-Platform-Alibaba.git
+```
+
+🚀 项目打包，确保项目能正常编译(现在dev环境能正常打包，生产环境需要prod，默认使用maven插件跳过测试用例)   
+
+注意：项目目录下执行
+```shell
+mvn clean install -P dev
+```
 
 🚀 启动Mysql、Redis和RocketMQ（如果使用高亮搜索，需要启动Elasticsearch）    
 
