--- a/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
+++ b/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
@@ -22,6 +22,38 @@ permalink: /pages/10bfa7/
 ## 项目运行（请一定按照作者的步骤来）
 🚀 注意：之前创建的数据库统统删掉（与该项目相关的数据库）
 
+🚀 软件版本
+<table>
+    <tr>
+        <th>软件名称</th>
+        <th>软件版本</th>
+    </tr>
+    <tr>
+        <td>JDK</td>
+        <td>21</td>
+    </tr>
+    <tr>
+        <td>Maven</td>
+        <td>3.9.4</td>
+    </tr>
+    <tr>
+        <td>Mysql</td>
+        <td>8.0.33</td>
+    </tr>
+    <tr>
+        <td>Redis</td>
+        <td>7.0.11</td>
+    </tr>
+    <tr>
+        <td>Elasticsearch</td>
+        <td>8.6.2</td>
+    </tr>
+    <tr>
+        <td>RocketMQ</td>
+        <td>5.1.1</td>
+    </tr>
+</table>
+
 🚀 修改win系统上面的hosts(如有需要，请自行更换IP)
 ```shell
 127.0.0.1 vue.laokou.org
@@ -123,7 +155,7 @@ mvn clean install -P dev
         <id>alimaven</id>
         <mirrorOf>central</mirrorOf>
         <name>aliyun maven</name>
-        <url>http://maven.aliyun.com/nexus/content/repositories/central/</url>
+        <url>https://maven.aliyun.com/nexus/content/repositories/central/</url>
     </mirror>
 </mirrors>
 ```
