--- a/docs/02.赞助/01.赞助.md
+++ b/docs/02.赞助/01.赞助.md
@@ -27,6 +27,12 @@ article: false
         <th>备注</th>
     </tr>
     <tr>
+        <td>2024/03/20</td>
+        <td>A细节*</td>
+        <td>￥66.00</td>
+        <td>无</td>
+    </tr>
+    <tr>
         <td>2024/03/03</td>
         <td>y*i</td>
         <td>￥58.88</td>
