--- a/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
+++ b/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
@@ -124,7 +124,7 @@ mvn clean install -P dev
 🚀 必须运行laokou-xxl-job（springboot版本升级成了spring 3.2.x）   
 <img src="/img/5/img_27.png"/>
 
-🚀 依次运行laokou-gateway、laokou-auth、laokou-admin、laokou-im（必须运行）
+🚀 依次运行laokou-gateway、laokou-admin、laokou-auth、laokou-im（必须运行）
 <img src="/img/5/img_12.png"/>
 🚀 运行完laokou-gateawy 需要运行路由同步脚本
 <img src="/img/5/img_2.png"/>
