--- a/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
+++ b/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
@@ -88,7 +88,7 @@ https方式
 git clone https://github.com/KouShenhai/KCloud-Platform-Alibaba.git
 ```
 
-🚀 项目打包，确保项目能正常编译(现在dev环境能正常打包，生产环境需要prod，默认使用maven插件跳过测试用例)   
+🚀 项目打包，确保项目能正常编译(先在dev环境能正常打包，生产环境需要prod，默认使用maven插件跳过测试用例)   
 
 注意：项目根目录下执行  
 
