--- a/docs/01.指南/06.SpringBoot篇/01.SpringBoot自动装配.md
+++ b/docs/01.指南/06.SpringBoot篇/01.SpringBoot自动装配.md
@@ -37,7 +37,7 @@ protected AutoConfigurationEntry getAutoConfigurationEntry(AnnotationMetadata an
   configurations = getConfigurationClassFilter().filter(configurations);
   // 步骤6
   fireAutoConfigurationImportEvents(configurations, exclusions);
-  // 组成数据，由Spring注入IOC容器
+  // 组装数据，由Spring注入IOC容器
   return new AutoConfigurationEntry(configurations, exclusions);
 }
 ```
