--- a/docs/01.指南/98.Go篇/01.Java如何快速转Go.md
+++ b/docs/01.指南/98.Go篇/01.Java如何快速转Go.md
@@ -11,7 +11,7 @@ permalink: /pages/643da2/
 
 &emsp; 很多人谈起Go，都会联想到云原生相关技术，比如Docker、Kubernetes，并且都会想到Go的性能比Java好，Go是静态编译语言，占用内存少，并且不需要运行在虚拟机上，这肯定快啊！  
 
-&emsp; 首先，我说一下，我为什么转Go，随着物联网的发展，设备数量呈指数倍增长，Go因其卓越的性能，可以轻松连接海量设备。Go目前在物联网用的多，因为出现没多少年，并且最近这几年才在国内火起来，再加上大公司将Go作为本公司的主要语言，前景应该还不错。
+&emsp; 首先，我说一下，我为什么转Go，随着物联网的发展，设备数量呈指数倍增长，Go因其卓越的性能，可以轻松连接海量设备。Go目前在物联网用的多，因为出现没多少年，并且最近这几年才在国内火起来，再加上大公司将Go作为本公司的主要语言，前景应该还不错。我也比较看好！
 
 &emsp; 其次，我说一下，我是怎么学习的，我大概花了三天，第一天学习《菜鸟教程》，熟悉基本语法。第二天，学会使用组件库连接数据库、缓存和消息队列，把所学的知识应用到实践中。第三天，学习协议对接，比如TCP、UDP等等。学完这些，就能应付工作啦。
 
