--- a/docs/01.指南/30.领域驱动设计篇/01.COLA学习之代码规范.md
+++ b/docs/01.指南/30.领域驱动设计篇/01.COLA学习之代码规范.md
@@ -9,11 +9,11 @@ permalink: /pages/59afe2/
 
 &emsp; 最近在看《代码精进之路从码农到工匠》这本书，作者张建飞开篇强调写好代码并不是一件容易的事，需要持续地学习和实践。本人对重点内容做了笔记，希望对你有所帮助。
 
-## 命名
+## 一、命名
 “在计算机科学中有两件难事：缓存和命名”，因此，作为开发者，有时候为了想出一个好的名字，不惜花上几个小时，甚至绞尽脑汁。
 为什么要这样做？因为一个好的命名可以方便阅读代码和梳理业务
 
-<span style="font-weight: bold;">命名需要显性化表达开发者的意图，拒绝无意义命名</span>   
+<span style="font-weight: bold;">1.命名需要显性化表达开发者的意图，拒绝无意义命名</span>   
 
 <span style="font-weight: bold;">变量命名需要能够准确描述业务</span>
 
@@ -39,4 +39,7 @@ final int PAGE_SIZE = 10;
 
 <span style="font-weight: bold;">函数命名要具体，拒绝无意义命名</span>  
 例如，<span style="color: #dd0000;"> processData() </span> 就不是一个好命名，相比之下，<span style="color: #00dd00;"> validateUserCredentials() </span> 或 <span style="color: #00dd00;"> eliminateDuplicateRequests() </span> 好很多
+
+<span style="font-weight: bold;">函数命名要体现做什么，而不是怎么做</span>  
+例如，雇员信息存储在一个栈中，需要获取最近的一个雇员信息。<span style="color: #00dd00;"> getLatestEmployee() </span> 比 <span style="color: #dd0000;"> popRecord() </span> 好，无需了解底层细节，业务更加具体
 
