--- a/docs/01.指南/30.领域驱动设计篇/01.COLA学习之代码规范.md
+++ b/docs/01.指南/30.领域驱动设计篇/01.COLA学习之代码规范.md
@@ -70,20 +70,34 @@ final int PAGE_SIZE = 10;
 | Client SDK	 | dto         | 服务对外的DTO                  | 是  |
 
 ## 2.类命名
-| 规范             | 用途                  | 解释                           |
-|:---------------|:--------------------|:-----------------------------|
-| xxxCmd         | Client Request      | Cmd代表Command，表示新增/修改/删除相关的请求 |
-| xxxQry         | Client Request      | Qry代表Query，表示查询相关的请求         |
-| xxxCO          | Client Object       | 用于传递数据，等同于DTO                |
-| xxxServiceI    | Api Service         | Api接口                        |
-| xxxCmdExe      | Command Executor    | 命令模式，一个新增/修改/删除相关的请求对应一个执行器  |
-| xxxQryExe      | Query Executor      | 命令模式，一个查询相关的请求对应一个执行器        |
-| xxxInterceptor | Command Interceptor | 拦截器，用于处理切面逻辑                 |
-| xxxExtPt       | Extension Point     | 扩展点                          |
-| xxxExt         | Extension           | 扩展实现                         |
-| xxxValidator   | Validator           | 校验器，用于校验的类                   |
-| xxxConvertor   | Convertor           | 转换器，实现不同层级对象互转               |
-|                |                     |                              |
+| 规范               | 用途                  | 解释                           |
+|:-----------------|:--------------------|:-----------------------------|
+| xxxCmd           | Client Request      | Cmd代表Command，表示新增/修改/删除相关的请求 |
+| xxxQry           | Client Request      | Qry代表Query，表示查询相关的请求         |
+| xxxCO            | Client Object       | 用于传递数据，等同于DTO                |
+| xxxServiceI      | Api Service         | Api接口                        |
+| xxxCmdExe        | Command Executor    | 命令模式，一个新增/修改/删除相关的请求对应一个执行器  |
+| xxxQryExe        | Query Executor      | 命令模式，一个查询相关的请求对应一个执行器        |
+| xxxInterceptor   | Command Interceptor | 拦截器，用于处理切面逻辑                 |
+| xxxExtPt         | Extension Point     | 扩展点                          |
+| xxxExt           | Extension           | 扩展实现                         |
+| xxxValidator     | Validator           | 校验器，用于校验的类                   |
+| xxxConvertor     | Convertor           | 转换器，实现不同层级对象互转               |
+| xxxAssembler     | Assembler           | 组装器，组装外部服务调用参数               |
+| xxxA             | AggregateRoot       | 聚合根，聚合实体和值对象                 |
+| xxxE             | Entity              | 领域实体                         |
+| xxxV             | Value Object        | 值对象                          |
+| xxxMapper        | Mapper              | 数据库映射                        |
+| xxxDomainService | Domain Service      | 领域服务                         |
+| xxxDO            | Data Object         | 数据对象，持久化                     |
+| xxxGateway       | Gateway             | 领域网关，防腐层                     |
+| xxxConstant      | Constant            | 常量                           |
+| xxxConfig        | Configuration       | 配置                           |
+| xxxUtil          | Utility             | 工具                           |
+| xxxEvent         | Event               | 事件                           |
+| xxxEventHandler  | Event Handler       | 处理事件                         |
+| xxxFactory       | Domain Factory      | 领域工厂                         |
+| xxxController    | Controller          | 处理页面请求                       |
 
 ## 3.方法命名
 ### 方法命名(应用层+接口层)
