--- a/docs/01.指南/30.领域驱动设计篇/01.COLA学习之代码规范.md
+++ b/docs/01.指南/30.领域驱动设计篇/01.COLA学习之代码规范.md
@@ -7,7 +7,7 @@ permalink: /pages/59afe2/
 你好呀，我的老朋友！我是老寇，欢迎来到老寇云平台！   
 话不多说，跟我一起学习COLA，以下内容来源于书本及个人理解，请认真阅读！！！
 
-&emsp; 最近在看《代码精进之路从码农到工匠》这本书，作者张建飞开篇强调写好代码并不是一件容易的事，需要持续地学习和实践。本人也赞同，因此，本人对重点内容做了笔记，希望对你有所帮助。
+&emsp; 最近在看《代码精进之路从码农到工匠》这本书(已看完)，作者张建飞开篇强调写好代码并不是一件容易的事，需要持续地学习和实践。本人也赞同，因此，本人对重点内容做了笔记，希望对你有所帮助。
 
 # 理论
 
