--- a/docs/01.指南/100.物联网/1.md
+++ b/docs/01.指南/100.物联网/1.md
@@ -1,8 +1,8 @@
 ---
-title: 1
+title: 物联网基础篇
 date: 2024-03-28 22:42:23
 permalink: /pages/4100a2/
 ---
 
-左移动 => 2的n次平方
-右移动 => 2的n次开方
+## 互联网和物联网区别
+互联网连接人，连接人与信息
