--- a/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
+++ b/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
@@ -17,7 +17,7 @@ permalink: /pages/10bfa7/
 
 ## 视频地址
 [老寇云平台-项目演示视频](https://www.bilibili.com/video/BV16M411C7v7/?spm_id_from=333.999.0.0&vd_source=ab1fb14d6d69950653360d4467efe4a5)   
-[老寇云平台-项目运行视频](https://www.bilibili.com/video/BV1Se41197Fp/?spm_id_from=333.999.0.0&vd_source=ab1fb14d6d69950653360d4467efe4a5)    
+[老寇云平台-十分钟启动项目](https://www.bilibili.com/video/BV1Se41197Fp/?spm_id_from=333.999.0.0&vd_source=ab1fb14d6d69950653360d4467efe4a5)    
 
 ## 项目运行（请一定按照作者的步骤来）
 🚀 注意：之前创建的数据库统统删掉（与该项目相关的数据库）
