--- a/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
+++ b/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
@@ -9,15 +9,15 @@ permalink: /pages/10bfa7/
 话不多说，跟我一起启动项目吧！
 
 ## 环境搭建  
-[Centos7安装Mysql 8.0.33](/pages/a2f161/)  
+[Docker安装Postgresql 16.1](/pages/d715cb/)  
 [Centos7安装Redis 7.0.11](/pages/90401a/)  
 [Centos7安装RocketMQ 5.1.1](/pages/0fb88c/)  
 [Centos7安装Jdk 17.0.7](/pages/65acfd/)  
-[Centos7安装Elasticsearch 8.6.2](/pages/d715cf/)
+[Centos7安装Elasticsearch 8.6.2](/pages/d715cf/)  
 
 ## 视频地址
-[老寇云平台-项目演示视频](https://www.bilibili.com/video/BV16M411C7v7/?spm_id_from=333.999.0.0&vd_source=ab1fb14d6d69950653360d4467efe4a5)   
-[老寇云平台-十分钟启动项目](https://www.bilibili.com/video/BV1Se41197Fp/?spm_id_from=333.999.0.0&vd_source=ab1fb14d6d69950653360d4467efe4a5)    
+[老寇云平台-项目演示视频](https://www.bilibili.com/video/BV16M411C7v7)   
+[老寇云平台-十分钟启动项目](https://www.bilibili.com/video/BV1AM4m1z7rS)    
 
 ## 项目运行（请一定按照作者的步骤来）
 🚀 注意：之前创建的数据库统统删掉（与该项目相关的数据库）
@@ -37,27 +37,28 @@ permalink: /pages/10bfa7/
         <td>3.9.4</td>
     </tr>
     <tr>
-        <td>Mysql</td>
-        <td>8.0.33</td>
+        <td>Postgresql</td>
+        <td>16.3</td>
     </tr>
     <tr>
         <td>Redis</td>
-        <td>7.0.11</td>
+        <td>7.2.x</td>
     </tr>
     <tr>
         <td>Elasticsearch</td>
-        <td>8.6.2</td>
+        <td>8.13.x</td>
     </tr>
     <tr>
         <td>RocketMQ</td>
-        <td>5.1.1</td>
+        <td>5.2.x</td>
     </tr>
 </table>
 
 🚀 修改win系统上面的hosts(如有需要，请自行更换IP)
 ```shell
-127.0.0.1 vue.laokou.org
-127.0.0.1 mysql.laokou.org
+127.0.0.1 react.laokou.org
+127.0.0.1 tdengine.laokou.org
+127.0.0.1 emqx.laokou.org
 127.0.0.1 rocketmq.laokou.org
 127.0.0.1 redis.laokou.org
 127.0.0.1 elasticsearch.laokou.org
@@ -66,7 +67,7 @@ permalink: /pages/10bfa7/
 127.0.0.1 nacos.laokou.org
 127.0.0.1 seata.laokou.org
 127.0.0.1 kafka.laokou.org
-127.0.0.1 xxl.job.laokou.org
+127.0.0.1 powerjob.laokou.org
 127.0.0.1 sentinel.laokou.org
 127.0.0.1 monitor.laokou.org
 127.0.0.1 gateway.laokou.org
@@ -79,30 +80,27 @@ permalink: /pages/10bfa7/
 ssh方式拉取（推荐）   
 
 ```shell
-git clone git@github.com:KouShenhai/KCloud-Platform-Alibaba.git
+git clone git@github.com:KouShenhai/KCloud-Platform-IoT.git
 ```
 
 https方式   
 
 ```shell
-git clone https://github.com/KouShenhai/KCloud-Platform-Alibaba.git
+git clone https://github.com/KouShenhai/KCloud-Platform-IoT.git
 ```
 
-🚀 项目打包，确保项目能正常编译(先在dev环境能正常打包，生产环境需要prod，默认使用maven插件跳过测试用例)   
+🚀 项目打包，确保项目能正常编译(先在test环境能正常打包，生产环境需要prod，默认使用maven插件跳过测试用例)   
 
-注意：项目根目录下执行  
+注意：项目根目录下执行（推荐test环境，dev是http，test是https，prod是https+kafka分布式链路）  
 
 ```shell
-mvn clean install -P dev
+mvn clean install -P test
 ```
 
-🚀 启动Mysql、Redis和RocketMQ（如果使用高亮搜索，需要启动Elasticsearch）    
+🚀 启动Postgresql、Redis、RocketMQ和Elasticsearch
 
-🚀 创建数据库和初始化数据，因为数据库比较多，使用flyway来管理数据库版本，话不多说，直接运行即可（如果需要写flyway相关文章，直接提issue）
+🚀 初始化数据库
 <img src="/img/5/img_21.png"/>
-
-🚀 切换开发环境为dev，测试环境为test（dev环境是http，test环境是https，keytool生成的证书，推荐开发使用dev环境，记得改pom和nacos配置）  
-<img src="/img/5/img_22.png"/>
 
 🚀 修改pom.xml配置，修改数据库连接信息，其他信息默认即可  
 <img src="/img/5/img_23.png"/>
@@ -121,9 +119,6 @@ mvn clean install -P dev
 🚀 必须运行seata  
 <img src="/img/5/img_11.png"/>
 
-🚀 必须运行laokou-xxl-job（springboot版本升级成了spring 3.2.x）   
-<img src="/img/5/img_27.png"/>
-
 🚀 依次运行laokou-gateway、laokou-admin、laokou-auth、laokou-im（必须运行）
 <img src="/img/5/img_12.png"/>
 🚀 运行完laokou-gateawy 需要运行路由同步脚本
@@ -132,10 +127,7 @@ mvn clean install -P dev
 <img src="/img/5/img_14.png"/>
 <img src="/img/5/img_13.png"/>  
 <img src="/img/5/img_14.png"/>  
-<img src="/img/5/img_15.png"/>  
-
-🚀 必须运行laokou-flowable  
-<img src="/img/5/img_18.png"/>
+<img src="/img/5/img_15.png"/>
 
 🚀 按需要运行laokou-monitor（不使用服务监控可以不启动），还有就是别用老夫的邮箱，求求你们改一改吧    
 <img src="/img/5/img_25.png"/>
