--- a/docs/02.赞助/01.赞助.md
+++ b/docs/02.赞助/01.赞助.md
@@ -8,7 +8,7 @@ article: false
 
 如果您正在使用这个项目并感觉良好，或者是想支持我继续开发，您可以通过如下`任意`方式支持我：
 
-1. Star并分享 [KCloud-Platform-Alibaba](https://github.com/KouShenhai/KCloud-Platform-Alibaba) :rocket:
+1. Star并分享 [KCloud-Platform-IoT](https://github.com/KouShenhai/KCloud-Platform-IoT) :rocket:
 2. 通过以下二维码 一次性捐款，打赏作者一杯茶。:tea:
 
 <img :src="$withBase('/img/qrcode/wxzf.png')" alt="Wechat Pay QRcode" width=180>
