--- a/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
+++ b/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
@@ -122,6 +122,14 @@ mvn clean install -P test
 🚀 依次运行laokou-gateway、laokou-admin、laokou-auth、laokou-im（必须运行）
 <img src="/img/5/img_12.png"/>   
 
+🚀 提醒：每个注册nacos的服务都需要在vm option增加参数
+```shell
+-Dtls.enable=true
+-Dtls.client.authServer=true
+-Dtls.client.trustCertPath=d:\\nacos.crt
+```
+<img src="/img/5/img_27.png"/>
+
 🚀 运行完laokou-gateawy 需要运行路由同步脚本
 <img src="/img/5/img_2.png"/>
 <img src="/img/5/img_28.png"/>  
