--- a/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
+++ b/docs/01.指南/03.快速上手/01.项目启动（傻瓜式教程）.md
@@ -130,6 +130,9 @@ mvn clean install -P test
 ```
 <img src="/img/5/img_27.png"/>
 
+`nacos.crt` 位置，见如下图  
+<img width="100" height="200" src="/img/5/img_29.png"/>
+
 🚀 运行完laokou-gateawy 需要运行路由同步脚本
 <img src="/img/5/img_2.png"/>
 <img src="/img/5/img_28.png"/>  
